--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -88,7 +88,7 @@
                 <p><a class="e-link" href="alohilani-giveaway/index.html">View Giveaway</a></p>
             </div>
         </div>
-
+</div>
     <div class="event-bg" style="background-image: url(climate/images/hero/BessFriday_GuilinChina.jpg)">
         <div class="details-card event-card">
             <h3>#mytinyatlasCLIMATE</h3>
