--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -635,7 +635,7 @@
                 <a href="../index.html"><img src="../images/back-arrow.svg" alt="" class="back-arrow"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
                 <div class="title">
                     <span class="issue">Remote 2018</span><br>
-                    <span class="feature">Oahu</span>
+                    <span class="feature">Maui</span>
                 </div>
                 <div class="feature-links">
                     <span id="pageLink"><a href="#page44">Trip Resources</a></span>
