--- a/new-site/events/alohilani-giveaway/index.html
+++ b/new-site/events/alohilani-giveaway/index.html
@@ -63,7 +63,7 @@
     <div id="tahiti" class="img-head" style="height: 650px; background-image: url(images/HERO_EN_ALOHILANI.jpg)">
     </div>
 
-    <div class="details-card with-logo" style="max-width:750px">
+    <div class="details-card" style="max-width:750px">
         <h3>Tiny Atlas Quarterly x Alohilani Giveaway</h3>
         <div class="main-content" style="max-width:710px">
             <p><b>Tiny Atlas recently visited Oahu and now you can experience Waikiki just how we did. On Thursday December 21st enter to win a 2 night stay at the <a href="https://www.alohilaniresort.com" target="_blank">Alohilani Resort</a> on our <a href="https://www.instagram.com/tinyatlasquarterly/" target="_blank">Tiny Atlas Quarterly</a> Instagram. </b></p>
