--- a/new-site/events/climate/index.html
+++ b/new-site/events/climate/index.html
@@ -78,7 +78,7 @@
         <!-- <img src="images/london-logo-v2.png" alt="My Tiny Atlas London" class="logo" style="margin-top: 60px;    width: 600px;"> -->
     </div>
 
-    <div class="details-card with-logo">
+    <div class="details-card">
         <h3>#mytinyatlasCLIMATE</h3>
         <div class="sidebar">
             <p class="info" style="width:160px">
