--- a/new-site/events/index.html
+++ b/new-site/events/index.html
@@ -46,6 +46,7 @@
 
             <span class="header-links list-triangle"><a href="index.html" class="link-active">Events</a>
                   <ul>
+                    <li><a href="lummi-island/index.html">Lummi Island</a></li>
                     <li><a href="mendocino/index.html">Mendocino</a></li>
                     <li><a href="alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="climate/index.html">Climate</a></li>
@@ -57,6 +58,20 @@
                 </span>
 
             <span class="header-links"><a href="https://alitedesigns.com/collections/californiamade" target="_blank">Shop</a></span>
+        </div>
+    </div>
+
+    <div class="event-bg" style="background-image: url(lummi-island/images/bg.jpg)">
+        <div class="details-card event-card">
+            <h3>Creative Retreat:<br> Lummi Island</h3>
+            <div class="main-content">
+              <p class="info">
+                  <span class="label">When</span><br /> July 19th - 23rd, 2018
+              </p>
+
+                <p>This little island is considered one of the best kept secrets of the San Juan archipelago, surrounded by neighboring beaches, rural mountains, state parks, and a quirky art scene. Stay on a 5 acre property with glamping and cottage accommodations bordering a large edible garden. Enhance your palate with fresh caught seafood, local veggies, and zesty meals throughout the trip. On Lummi Island, we will never be short of entertainment as we hike, boat, whale watch, and embark on a sea foraging kayak trip all in a weekend's time.</p>
+                <p><a class="e-link" href="lummi-island/index.html">View Trip</a></p>
+            </div>
         </div>
     </div>
 
