--- a/new-site/events/lummi-island/index.html
+++ b/new-site/events/lummi-island/index.html
@@ -55,7 +55,7 @@
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
                     <li><a href="index.html" class="link-active">Lummis Island</a></li>
-                    <li><a href="index.html">Mendocino</a></li>
+                    <li><a href="../mendocino/index.html">Mendocino</a></li>
                     <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="../climate/index.html">Climate</a></li>
                     <li><a href="../mytinyatlaslondon/index.html">London</a></li>
@@ -72,7 +72,7 @@
     <div class="img-head" style="height: 650px; background-image: url(images/bg.jpg)">
     </div>
 
-    <div class="details-card with-logo">
+    <div class="details-card">
         <h3>Tiny Atlas Retreat - Lummi Island</h3>
         <div class="sidebar">
             <p class="info" style="width:160px">
