--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -150,9 +150,11 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/maui-title.png" alt="" style="width:410px;"></div>
-                        <h3>Photography by: <a href="#" target="_blank">Emily Nathan</a><br />
+                        <h2>Flowers</h2>
+                        <p>King proteas, grown on the volcanic slopes in Haleakala's rich volcanic soils, seen at Maui Floral's misty wildflower farm.</p>
+                        <p>Photography by: <a href="#" target="_blank">Emily Nathan</a><br />
                          Writing by: <a href="#" target="_blank">Emily Nathan</a><br />
-                         Title Design & Illustrations by: <a href="#" target="_blank">Julianna Goodman</a><br />
+                         Title Design by: <a href="#" target="_blank">Julianna Goodman</a><br /></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -258,6 +260,22 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Lumeria</h2>
+                        <p>The Lumeria is made up of historic Hawaiian buildings hidden in a jungle of palms, eucalyptus and bamboo. Local bird calls are all you'll hear interrupting the silence.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -276,6 +294,22 @@
                 <img srcset="images/07_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Hana</h2>
+                        <p>Tiny Hana, with a population of just over one thousand, is one of the most isolated communities in Hawaii. It's casual, local feel comes through in everything from the honor-system fruit stands to the sporadic hours at the town's food trucks.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -296,6 +330,21 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Pa'ia town</h2>
+                        <p>Quintessentially Hawaiian, Pa'ia's charm is in its residential roads, locally-owned shops, and beautiful sandy beaches.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -315,6 +364,23 @@
                 <img srcset="images/09_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Road to Hana</h2>
+                        <p>The Road to Hana snakes around the eastern coast of Maui, twisting through hundreds of turns and crossing over fifty bridges. Stop along the way at cascading waterfalls, lush jungles, the Pa'iloa black sand beach.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -372,6 +438,21 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Kipahulu drive and the trail</h2>
+                        <p>On the backroads of Hana, drive through Kipahulu to encounter even more lush, natural beauty. Mailboxes emerge from the lava stone, and fruit stands and local homes line the winding streets.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -392,6 +473,22 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Bamboo</h2>
+                        <p>The towering bamboo overhead bumps musically on a stroll through Na'ili'ili Haele. New shoots push their way through the ground, littered with muted brown husks. </p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -410,6 +507,22 @@
                 <img srcset="images/14_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Bamboo Trail</h2>
+                        <p>Off the Road to Hana, the Na'ili'ili Haele trail meanders through miles of towering bamboo, coming to a close at a waterfall pool.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -449,6 +562,22 @@
                 <img srcset="images/16_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Travaasa pool</h2>
+                        <p>Lined with volcanic rock and shaded by mountains above, Travaasa's pool overlooks the ocean at Hana Bay. </p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -522,6 +651,23 @@
                 <img srcset="images/20_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Travaasa</h2>
+                        <p>Deep in Maui's upcountry, the historic and tranquil property at Travaasa offers a refuge after the many switchbacks of the Road to Hana. Horses and sheep graze on the nearby pastures covered with a blanket of green.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -596,6 +742,32 @@
                 <img srcset="images/24_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                      <h2>Silverswords</h2>
+                      <p>The landscape of Haleakala is dotted with silverswords ('ahinahina) - spiky, pearly-colored succulents found nowhere else in the world.</p>
+                      <h2 class="with-ill">Resources</h2>
+
+                      <h4>Eat:</h4>
+
+
+                      <h4>Stay:</h4>
+
+                      <h4>Do:</h4>
+
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -614,6 +786,23 @@
                 <img srcset="images/25_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Haleakala</h2>
+                        <p>Both locals and tourists congregate before dawn to watch the sun rise at 10,023 feet. The dark and barren landscape lights up with the sun, clouds turning from shades of dusty pink to amber yellow and cadmium red.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
+
         </div>
         <!-- end wrapper div -->
     </div>
