oahu illos + texts
added editors letter and changed features h2

--- a/new-site/kona/index.html
+++ b/new-site/kona/index.html
@@ -153,8 +153,8 @@
                          <h2>Caldera at night </h2>
                          <p>The Halema'uma'u crater erupting in the early hours, on the slopes of Kilauea. Before sunrise and after sunset, the fiery glow of the lava lake dyes the steam with vibrant reds and oranges.</p>
                          <p>Photography by: <a href="#" target="_blank">Emily Nathan</a><br />
-                          Writing by: <a href="#" target="_blank">Emily Nathan</a><br />
-                          Title Design by: <a href="#" target="_blank">Julianna Goodman</a><br /></p>
+                          Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
+                          Lettering & Illustrations by: <a href="#" target="_blank">Julianna Goodman</a><br /></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -642,27 +642,27 @@
                         <p>A local establishment, Teshima's has been open in Kona for almost one hundred years. Think Japanese classics like sashimi and sukiyaki, and bento boxes for lunch.</p>
 
                         <h4>Stay:</h4>
-                        <h5><a href="">Volcano Village Lodge</a></h5>
-                        <p></p>
+                        <h5><a href="https://www.volcanovillagelodge.com/">Volcano Village Lodge</a></h5>
+                        <p>A cozy bed and breakfast tucked away just outside of Volcanoes National Park. The perfect refuge after a day of exploring the island's volcanoes, black sand beaches, and native Hawaiian rainforest.</p>
 
-                        <h5><a href="">Four Seasons Resort Hualalai</a></h5>
-                        <p></p>
+                        <h5><a href="https://www.fourseasons.com/hualalai/">Four Seasons Resort Hualalai</a></h5>
+                        <p>The Four Seasons in Hualalai, Kona, was built for taking it easy. Beautiful suites open up to a lawn plentiful with lush, tropical plants. Pools dot the property, providing plenty of opportunities to cool down. A natural pond is carved into the volcanic rock, home to thousands of species of tropical fish, for in-hotel snorkeling. This serene spot also houses a selection of restaurants and a natural spa.</p>
 
-                        <h5><a href="">Hilton Waikoloa Village</a></h5>
-                        <p></p>
+                        <h5><a href="http://www.hiltonwaikoloavillage.com/">Hilton Waikoloa Village</a></h5>
+                        <p>Family-friendly hotel reachable by hotel boat or tram through a lush garden waterway. With a spa, three waterfall pools, and plenty of dining options.</p>
 
                         <h4>Do:</h4>
-                        <h5><a href="">Hawai'i Volcanoes National Park</a></h5>
-                        <p></p>
+                        <h5><a href="https://www.nps.gov/havo/index.htm">Hawai'i Volcanoes National Park</a></h5>
+                        <p>Home to two active Hawaiian volcanoes, Kilauea and Mauna Loa. Walk through the 500 year-old Thurston Lava Tube and spot native birds like crimson 'apapane or the lesser common oma'o. See the fiery lava meet the sea and lava flows on the Chain of Craters Road, and explore dozens of miles of hiking trails that wind through this spectacular landscape.</p>
 
-                        <h5><a href="">Snorkel at Kealakekua Bay</a></h5>
-                        <p></p>
+                        <h5>Snorkel at Kealakekua Bay</h5>
+                        <p>Admire the tropical marine life and spot sea turtles at secluded Kealakekua Bay for some of Hawaii's very best snorkeling.</p>
 
-                        <h5><a href="">Maunakea Summit & Stars</a></h5>
-                        <p></p>
+                        <h5><a href="https://www.hawaii-forest.com/tours/kona-maunakea/">Maunakea Summit & Stars</a></h5>
+                        <p>Take in the sunset at 14,000 feet on Maunakea, then admire the spectacularly clear skies as you learn about the stars and navigation. Hosted by Hawaii Forest & Trail.</p>
 
-                        <h5><a href="">Kaloko-Honokohau National Historical Park</a></h5>
-                        <p></p>
+                        <h5><a href="https://www.nps.gov/kaho/index.htm">Kaloko-Honokohau National Historical Park</a></h5>
+                        <p>Kaloko-Honokohau is an  ancient Hawaiian fishing village, home to petroglyphs, fishponds, and often sea turtles basking on the beach. Take in beautiful scenery as you learn about how this early Hawaiian settlement survived on the lava fields along the Kona coast. </p>
 
                     </div>
                 </div>
@@ -692,7 +692,7 @@
                     <span class="feature">Kona</span>
                 </div>
                 <div class="feature-links">
-                    <span id="pageLink"><a href="#page44">Trip Resources</a></span>
+                    <span id="pageLink"><a href="#page22">Trip Resources</a></span>
                 </div>
             </div>
         </div>
@@ -832,8 +832,8 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // IN
-                pageCount = 43;
-                pageNext = 43;
+                pageCount = 21;
+                pageNext = 21;
             }
         }
 
