--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -150,11 +150,9 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/maui-title.png" alt="" style="width:410px;"></div>
-                        <h2>Flowers</h2>
-                        <p>King proteas, grown on the volcanic slopes in Haleakala's rich volcanic soils, seen at Maui Floral's misty wildflower farm.</p>
                         <p>Photography by: <a href="#" target="_blank">Emily Nathan</a><br />
-                         Writing by: <a href="#" target="_blank">Emily Nathan</a><br />
-                         Title Design by: <a href="#" target="_blank">Julianna Goodman</a><br /></p>
+                         Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
+                         Lettering & Illustrations by: <a href="#" target="_blank">Julianna Goodman</a><br /></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -180,6 +178,22 @@
                 <img srcset="images/02_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                      <h2>Flowers</h2>
+                      <p>King proteas, grown on the volcanic slopes in Haleakala's rich volcanic soils, seen at Maui Floral's misty wildflower farm.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -240,6 +254,21 @@
             </picture>
             <!-- IMAGE END -->
 
+            <!-- BOX  INTERVIEW-->
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <!-- CAPTION -->
+                <!-- LEFT CAPTION -->
+                <div class="pg-box-content">
+                    <!-- CONTENT -->
+                    <!-- INTERVIW -->
+                    <div id="pg-interview">
+                        <h2>Lumeria</h2>
+                        <p>The Lumeria is made up of historic Hawaiian buildings hidden in a jungle of palms, eucalyptus and bamboo. Local bird calls are all you'll hear interrupting the silence.</p>
+                    </div>
+                </div>
+                <!--END INTERVIEW -->
+            </div>
+            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -260,22 +289,6 @@
             </picture>
             <!-- IMAGE END -->
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Lumeria</h2>
-                        <p>The Lumeria is made up of historic Hawaiian buildings hidden in a jungle of palms, eucalyptus and bamboo. Local bird calls are all you'll hear interrupting the silence.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -295,22 +308,6 @@
             </picture>
             <!-- IMAGE END -->
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Hana</h2>
-                        <p>Tiny Hana, with a population of just over one thousand, is one of the most isolated communities in Hawaii. It's casual, local feel comes through in everything from the honor-system fruit stands to the sporadic hours at the town's food trucks.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -329,22 +326,6 @@
                 <img srcset="images/08_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Pa'ia town</h2>
-                        <p>Quintessentially Hawaiian, Pa'ia's charm is in its residential roads, locally-owned shops, and beautiful sandy beaches.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -375,6 +356,7 @@
                     <div id="pg-interview">
                         <h2>Road to Hana</h2>
                         <p>The Road to Hana snakes around the eastern coast of Maui, twisting through hundreds of turns and crossing over fifty bridges. Stop along the way at cascading waterfalls, lush jungles, the Pa'iloa black sand beach.</p>
+                        <p>Tiny Hana, with a population of just over one thousand, is one of the most isolated communities in Hawaii. It's casual, local feel comes through in everything from the honor-system fruit stands to the sporadic hours at the town's food trucks.</p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -473,22 +455,6 @@
             </picture>
             <!-- IMAGE END -->
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Bamboo</h2>
-                        <p>The towering bamboo overhead bumps musically on a stroll through Na'ili'ili Haele. New shoots push their way through the ground, littered with muted brown husks. </p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -518,6 +484,7 @@
                     <div id="pg-interview">
                         <h2>Bamboo Trail</h2>
                         <p>Off the Road to Hana, the Na'ili'ili Haele trail meanders through miles of towering bamboo, coming to a close at a waterfall pool.</p>
+                        <p>The towering bamboo overhead bumps musically on a stroll through Na'ili'ili Haele. New shoots push their way through the ground, littered with muted brown husks. </p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -571,7 +538,8 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Travaasa pool</h2>
+                        <h2>Travaasa</h2>
+                        <p>Deep in Maui's upcountry, the historic and tranquil property at Travaasa offers a refuge after the many switchbacks of the Road to Hana. Horses and sheep graze on the nearby pastures covered with a blanket of green.</p>
                         <p>Lined with volcanic rock and shaded by mountains above, Travaasa's pool overlooks the ocean at Hana Bay. </p>
                     </div>
                 </div>
@@ -651,22 +619,6 @@
                 <img srcset="images/20_maui_emilynathan-S.jpg" alt="Tiny Atlas Quarterly, Maui, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
-
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-                <!-- CAPTION -->
-                <!-- LEFT CAPTION -->
-                <div class="pg-box-content">
-                    <!-- CONTENT -->
-                    <!-- INTERVIW -->
-                    <div id="pg-interview">
-                        <h2>Travaasa</h2>
-                        <p>Deep in Maui's upcountry, the historic and tranquil property at Travaasa offers a refuge after the many switchbacks of the Road to Hana. Horses and sheep graze on the nearby pastures covered with a blanket of green.</p>
-                    </div>
-                </div>
-                <!--END INTERVIEW -->
-            </div>
-            <!-- END BOX -->
 
         </div>
         <!-- end wrapper div -->
@@ -751,17 +703,11 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
+                      <h2>Haleakala</h2>
+                      <p>Both locals and tourists congregate before dawn to watch the sun rise at 10,023 feet. The dark and barren landscape lights up with the sun, clouds turning from shades of dusty pink to amber yellow and cadmium red.</p>
+
                       <h2>Silverswords</h2>
                       <p>The landscape of Haleakala is dotted with silverswords ('ahinahina) - spiky, pearly-colored succulents found nowhere else in the world.</p>
-                      <h2 class="with-ill">Resources</h2>
-
-                      <h4>Eat:</h4>
-
-
-                      <h4>Stay:</h4>
-
-                      <h4>Do:</h4>
-
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -795,8 +741,40 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Haleakala</h2>
-                        <p>Both locals and tourists congregate before dawn to watch the sun rise at 10,023 feet. The dark and barren landscape lights up with the sun, clouds turning from shades of dusty pink to amber yellow and cadmium red.</p>
+                        <h2 class="with-ill">Resources</h2>
+
+                        <h4>Eat:</h4>
+                        <h5><a href="http://kulabistro.com/">Kula Bistro</a></h5>
+                        <p>Stop here on your way back from Haleakala National Park for Italian classics and Hawaiian-style fish dishes, by local chef Luciano Zanon. Cheery, spacious and great for groups.</p>
+
+                        <h5><a href="https://www.yelp.com/biz/aunty-sandys-banana-bread-keanae-2">Aunty Sandy's Banana Bread</a></h5>
+                        <p>A necessary stop along the Road to Hāna. Aunty Sandy has been making the same, delicious banana bread for over 30 years. </p>
+
+                        <h4>Stay:</h4>
+                        <h5><a href="https://travaasa.com/hana/">Travassa</a></h5>
+                        <p>Spectacular boutique hotel in Hana, often named one of the best in Hawaii. Travassa houses everything from a natural spa to lei-making classes to bamboo pole fishing. Nestled in the middle of lush, rolling fields, home to wandering horses and an infinity pool. Their on-site restaurant, the Preserve Kitchen + Bar, is an excellent dinner option.</p>
+
+                        <h5><a href="https://lumeriamaui.com/">Lumeria Maui</a></h5>
+                        <p>Modern, comfortable guest houses and suites on a lush property in Maui's North Shore. Lumeria also hosts yoga and wellness classes, and serves farm-to-table, plant-focused meals at their restaurant, the Wooden Crate.</p>
+
+                        <h4>Do:</h4>
+                        <h5><a href="http://roadtohana.com/">Road to Hana</a></h5>
+                        <p>An extraordinarily beautiful drive that winds through waterfalls, lush canyons, rugged beaches. The drive takes one to two days, with many viewpoints and stops along the way.</p>
+
+                        <h5><a href="https://www.nps.gov/hale/index.htm">Haleakala National Park</a></h5>
+                        <p>Haleakala - Hawaiian for "house of the sun" is one of Maui's most well-known national parks, and for good reason. At 10,000 feet, this might be one of the most spectacular sunrises in the world.</p>
+
+                        <h5><a href="http://cdamaui.com/">Cafe Des Amis</a></h5>
+                        <p>Pa'ia's Cafe Des Amis serves freshly-made crepes alongside slow-cooked Indian curries. Cozy, casual, and with vintage decor.</p>
+
+                        <h5><a href="https://imrieindustries.com/">Imrie Industries</a></h5>
+                        <p>Beautifully-designed bathing suits and clothing by the Imrie family, who split their time between Maui, Montauk, the Caribbean (and with locations in each).</p>
+
+                        <h5><a href="http://dlnr.hawaii.gov/dsp/parks/maui/waianapanapa-state-park/">Wai'anapanapa State Park</a></h5>
+                        <p>An other-worldly black sand beach near Hana on the eastern shore of Maui. Also home to lava caves, blowholes, natural stone arches, beautiful views.</p>
+
+                        <h5><a href="https://ntbg.org/gardens/kahanu">Kahanu Garden</a></h5>
+                        <p>An isolated botanical garden on the Hana coast. Home to collections of 'ulu (breadfruit), and canoe plants - traditional that were transported to Hawaii by canoe almost 1,800 years ago.</p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -827,7 +805,7 @@
                     <span class="feature">Maui</span>
                 </div>
                 <div class="feature-links">
-                    <span id="pageLink"><a href="#page44">Trip Resources</a></span>
+                    <span id="pageLink"><a href="#page25">Trip Resources</a></span>
                 </div>
             </div>
         </div>
@@ -970,8 +948,8 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // IN
-                pageCount = 43;
-                pageNext = 43;
+                pageCount = 24;
+                pageNext = 24;
             }
         }
 
