City link and kona maui illos

--- a/new-site/2017-city.html
+++ b/new-site/2017-city.html
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <div class="split cover fadeIn animated" style="background: url(../images/city-cover.jpg) center no-repeat;">
+        <div class="split cover fadeIn animated" style="background: url(images/city-cover.jpg) center no-repeat;">
             <img src="images/2017-city-logo.png" alt="" class="fadeIn animated">
         </div>
         <div class="split content">
