--- a/new-site/about/editors-letter.html
+++ b/new-site/about/editors-letter.html
@@ -132,11 +132,10 @@
                      <!-- IMAGE START -->
                 <picture>
                   <!--[if IE 9]><video style="display: none;"><![endif]-->
-                  <source srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-L.jpg" media="(min-width: 960px)">
-                  <source srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-M.jpg" media="(min-width: 768px)">
-                  <source srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-V.jpg" media="(orientation: portrait)">
+                  <source srcset="images/2018-Editors-Letter-L.jpg" media="(min-width: 960px)">
+                  <source srcset="images/2018-Editors-Letter-M.jpg" media="(min-width: 768px)">
                     <!--[if IE 9]></video><![endif]-->
-                  <img srcset="images/Editors-Letter_Nicole_Franzen_Buenos_Aires-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                  <img srcset="images/2018-Editors-Letter-S.jpg" alt="Tiny Atlas Quarterly, Oahu, Emily Nathan">
                 </picture>
                 <!-- IMAGE END -->
 
