--- a/new-site/index.html
+++ b/new-site/index.html
@@ -243,6 +243,13 @@
             </div>
 
             <div class="issue">
+                <a href="2017-city.html">
+                  <img src="images/tiny-atlas-cover-city-2017.jpg" alt="">
+                </a>
+            </div>
+
+
+            <div class="issue">
                 <a href="previous-issues.html#westcoast-2016">
                   <img src="images/tiny-atlas-cover-west-coast-2016.jpg" alt="" class="lazy">
                 </a>
@@ -254,11 +261,7 @@
                 </a>
             </div>
 
-            <div class="issue">
-                <a href="previous-issues.html#fire-2015">
-                  <img src="images/tiny-atlas-cover-fire-2015.jpg" alt="">
-                </a>
-            </div>
+            
             <div class="description description-bottom">
               <p><a href="previous-issues.html">View all Issues</a></p>
             </div>
