--- a/new-site/kona/index.html
+++ b/new-site/kona/index.html
@@ -322,7 +322,8 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Volcanoes National Park</h2>
+                        <img src="images/illo_blue_flowers.png" alt="" class="ill">
+                        <h2 class="with-ill-small">Volcanoes National Park</h2>
                         <p>Nearly every feature in the park is tied to Pele, the Hawaiian volcano goddess. Small lava droplets are "Pele's tears," and the fine strands of volcanic glass littered on the landscape are "Pele's hair." Leis are left throughout the park as offerings, their vibrant tropical flowers a stark contrast to the ashen rock.</p>
                     </div>
                 </div>
@@ -579,7 +580,8 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Local beach</h2>
+                        <img src="images/illo_multi_flowers.png" alt="" class="ill">
+                        <h2 class="with-ill-small">Local beach</h2>
                         <p>Under the surface of the sandy beaches dotted across the island, turtles, spinner dolphins, and tropical fish make their homes.</p>
                     </div>
                 </div>
@@ -825,7 +827,7 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // OUT
-                $("#page18").velocity({
+                $("#page22").velocity({
                     opacity: 1
                 }, {
                     display: "block"
