--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -354,7 +354,8 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Road to Hana</h2>
+                        <img src="images/illo_pinkflower.png" alt="" class="ill">
+                        <h2 class="with-ill-small">Road to Hana</h2>
                         <p>The Road to Hana snakes around the eastern coast of Maui, twisting through hundreds of turns and crossing over fifty bridges. Stop along the way at cascading waterfalls, lush jungles, the Pa'iloa black sand beach.</p>
                         <p>Tiny Hana, with a population of just over one thousand, is one of the most isolated communities in Hawaii. It's casual, local feel comes through in everything from the honor-system fruit stands to the sporadic hours at the town's food trucks.</p>
                     </div>
@@ -482,7 +483,8 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Bamboo Trail</h2>
+                        <img src="images/illo_vine.png" alt="" class="ill">
+                        <h2 class="with-ill-small">Bamboo Trail</h2>
                         <p>Off the Road to Hana, the Na'ili'ili Haele trail meanders through miles of towering bamboo, coming to a close at a waterfall pool.</p>
                         <p>The towering bamboo overhead bumps musically on a stroll through Na'ili'ili Haele. New shoots push their way through the ground, littered with muted brown husks. </p>
                     </div>
@@ -706,7 +708,7 @@
                       <h2>Haleakala</h2>
                       <p>Both locals and tourists congregate before dawn to watch the sun rise at 10,023 feet. The dark and barren landscape lights up with the sun, clouds turning from shades of dusty pink to amber yellow and cadmium red.</p>
 
-                      <h2>Silverswords</h2>
+                      <h2 class="with-ill">Silverswords</h2>
                       <p>The landscape of Haleakala is dotted with silverswords ('ahinahina) - spiky, pearly-colored succulents found nowhere else in the world.</p>
                     </div>
                 </div>
@@ -941,7 +943,7 @@
                 }, {
                     duration: 1000
                 }, "easeInOutQuint"); // OUT
-                $("#page18").velocity({
+                $("#page25").velocity({
                     opacity: 1
                 }, {
                     display: "block"
