remote - add credit links

--- a/new-site/kona/index.html
+++ b/new-site/kona/index.html
@@ -150,11 +150,11 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/kona-title.png" alt="" style="width:410px;"></div>
-                         <h2>Caldera at night </h2>
+                         <h2>Caldera at night</h2>
                          <p>The Halema'uma'u crater erupting in the early hours, on the slopes of Kilauea. Before sunrise and after sunset, the fiery glow of the lava lake dyes the steam with vibrant reds and oranges.</p>
-                         <p>Photography by: <a href="#" target="_blank">Emily Nathan</a><br />
+                         <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a><br />
                           Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
-                          Lettering & Illustrations by: <a href="#" target="_blank">Julianna Goodman</a><br /></p>
+                          Lettering & Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
