--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -107,7 +107,7 @@
         <span class="header-links"><a href="index.html" class="link-active">About</a></span>
         <span class="header-links list-triangle"><a href="../events/index.html">Events</a>
           <ul>
-            <li><a href="../events/lummi-island/index.html">Lummis Island</a></li> <li><a href="../events/mendocino/index.html">Mendocino</a></li>
+            <li><a href="../events/lummi-island/index.html">Lummi Island</a></li> <li><a href="../events/mendocino/index.html">Mendocino</a></li>
             <li><a href="../events/alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../events/climate/index.html">Climate</a></li>
             <li><a href="../events/mytinyatlaslondon/index.html">London</a></li>
@@ -132,10 +132,10 @@
                      <!-- IMAGE START -->
                 <picture>
                   <!--[if IE 9]><video style="display: none;"><![endif]-->
-                  <source srcset="images/about-2017-emily-shur-L.jpg" media="(min-width: 960px)">
-                  <source srcset="images/about-2017-emily-shur-M.jpg" media="(min-width: 768px)">
+                  <source srcset="images/2018-About-AndrewKearns-L.jpg" media="(min-width: 960px)">
+                  <source srcset="images/2018-About-AndrewKearns-M.jpg" media="(min-width: 768px)">
                   <!--[if IE 9]></video><![endif]-->
-                  <img srcset="images/about-2017-emily-shur-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
+                  <img srcset="images/2018-About-AndrewKearns-S.jpg" alt="Tiny Atlas Quarterly, Tokyo, Emily Shur">
                 </picture>
                 <!-- IMAGE END -->
 
@@ -158,6 +158,11 @@
                       <p>Twitter <br />
                           <a href="https://twitter.com/TinyAtlasQtrly">@tinyatlasqtrly</a>
                         </p>
+
+                        <p>Photography+Partnerships<br />
+                          <a href="mailto:deb@tinyatlasquarterly.com">deb@tinyatlasquarterly.com</a></p>
+
+
                        <p>Questions<br />
                          <a href="mailto:info@tinyatlasquarterly.com?Subject=Tiny%20Atlas%20Quarterly">info@tinyatlasquarterly.com</a>
                        </p>
