--- a/new-site/index.html
+++ b/new-site/index.html
@@ -91,7 +91,7 @@
 
             <span class="header-links list-triangle"><a href="events/index.html">Events</a>
                   <ul>
-                    <li><a href="events/lummi-island/index.html">Lummis Island</a></li> <li><a href="events/mendocino/index.html">Mendocino</a></li>
+                    <li><a href="events/lummi-island/index.html">Lummi Island</a></li> <li><a href="events/mendocino/index.html">Mendocino</a></li>
                     <li><a href="events/alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="events/climate/index.html">Climate</a></li>
                     <li><a href="events/mytinyatlaslondon/index.html">London</a></li>
@@ -127,7 +127,7 @@
                       <img src="images/oahu-feature.jpg" alt="" class="preview" />
                       <div class="info">
                           <img src="images/oahu-title.png" alt="" class="title" />
-                          <p class="text">Delve beyond the tourist sheen of Waikiki, and discover layers of culture, history and community that join to shape the island.</p>
+                          <p class="text">Discover the fresh faces of Oahu - whether freediving or haku lei making – these locals embody the tradition and community that shape the island</p>
                           <div class="meta">Travel Log<span>4.22.2018</span></div>
                       </div>
                   </a>
@@ -138,7 +138,7 @@
                       <img src="images/maui-feature.png" alt="" class="preview" />
                       <div class="info">
                           <img src="images/maui-title.png" alt="" class="title" />
-                          <p class="text">From jungles where wild vines reclaim paved roads to idyllic beaches perfect for basking in the sunshine, Maui's natural wonders await.</p>
+                          <p class="text">From jungles where wild vines reclaim paved roads, to flowing waterfalls and lush National Parks, Maui’s natural wonders await</p>
                           <div class="meta">beauty<span>4.22.2018</span></div>
                       </div>
                   </a>
@@ -261,7 +261,7 @@
                 </a>
             </div>
 
-            
+
             <div class="description description-bottom">
               <p><a href="previous-issues.html">View all Issues</a></p>
             </div>
