--- a/new-site/about/editors-letter.html
+++ b/new-site/about/editors-letter.html
@@ -107,7 +107,7 @@
         <span class="header-links"><a href="index.html">About</a></span>
         <span class="header-links list-triangle"><a href="../events/index.html">Events</a>
           <ul>
-            <li><a href="../events/lummi-island/index.html">Lummis Island</a></li> <li><a href="../events/mendocino/index.html">Mendocino</a></li>
+            <li><a href="../events/lummi-island/index.html">Lummi Island</a></li> <li><a href="../events/mendocino/index.html">Mendocino</a></li>
             <li><a href="../events/alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../events/climate/index.html">Climate</a></li>
             <li><a href="../events/mytinyatlaslondon/index.html">London</a></li>
@@ -132,10 +132,10 @@
                      <!-- IMAGE START -->
                 <picture>
                   <!--[if IE 9]><video style="display: none;"><![endif]-->
-                  <source srcset="images/2018-Editors-Letter-L.jpg" media="(min-width: 960px)">
-                  <source srcset="images/2018-Editors-Letter-M.jpg" media="(min-width: 768px)">
+                  <source srcset="images/2018-Editors-Letter-AndrewKearns-L.jpg" media="(min-width: 960px)">
+                  <source srcset="images/2018-Editors-Letter-AndrewKearns-M.jpg" media="(min-width: 768px)">
                     <!--[if IE 9]></video><![endif]-->
-                  <img srcset="images/2018-Editors-Letter-S.jpg" alt="Tiny Atlas Quarterly, Oahu, Emily Nathan">
+                  <img srcset="images/2018-Editors-Letter-AndrewKearns-S.jpg" alt="Tiny Atlas Quarterly, Oahu, Emily Nathan">
                 </picture>
                 <!-- IMAGE END -->
 
@@ -150,10 +150,10 @@
                        <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
 
                        <h2 class="with-ill">Remote</h2>
-                       <p>Arriving somewhere new and finding a geography completely unlike the one I grew up in always strikes me with joy. Give me headache high mountains, a warm lagoon filled with sea turtles (and sharks!), a fir and cedar filled terrain of pristine islets; bears wrestling berries off shrubs as they walk their well worn paths, 'ōhi'a trees soaking in rain from vog (volcanic fog),  or miles of shiny black lava, crunching as it cracks like a crusty snow beneath my sneakers. You name it. I’m immediately alive, present and awake to my surroundings.</p>
-                       <p>I was born and raised in the Midwest. Geographically speaking that meant I grew up in a land of green lawns and maple trees, an occasional hill and many lakes. There is a lot of beauty to be found in the midwest but the landscape also left a lot to the imagination. As a kid I poured over my parents’ National Geographic magazines. I spent hours locating F9 or B24 in our oversized linen atlas too and I would spin our globe and drag my fingertips over the paper mountains. Funny thing is, kids from all around the world, from Perth and the Alps, from Polynesia and Texas, Mongolia and Namibia witness their more dramatic landscapes and come up with the same urge. Well some kids, those like me and those like you. Maybe we all have what is sometimes referred to as a wanderlust gene, a risk-taking variant allelle potentially linked to 20% of humanity’s collective love of travel. </p>
+                       <p>Arriving somewhere new and finding a geography completely unlike the one I grew up in always strikes me with joy. Give me headache high mountains, a warm lagoon filled with sea turtles (and sharks!), a fir and cedar filled terrain of pristine islets; bears wrestling berries off shrubs, 'ōhi'a trees soaking in rain from vog (volcanic fog),  or miles of shiny black lava, crunching as it cracks like a crusty snow beneath my sneakers. You name it. I’m immediately alive, present and awake to my surroundings.</p>
+                       <p>I was born and raised in the Midwest. Geographically speaking that meant I grew up in a land of green lawns and maple trees, an occasional hill and many lakes. There is a lot of beauty to be found in the midwest but the landscape also left a lot to the imagination. As a kid I poured over my parents’ National Geographic magazines. I spent hours locating F9 or B24 in our oversized linen atlas and I would spin our globe and drag my fingertips over the paper mountains. Funny thing is, kids from all around the world, from Perth and the Alps, from Polynesia and Texas, Mongolia and Namibia witness their more dramatic landscapes and come up with the same urge. Well some kids, those like me and those like you. Maybe we all have what is sometimes referred to as a wanderlust gene, a risk-taking variant allele potentially linked to 20% of humanity’s collective love of travel.</p>
                        <p>The places in this issue now rolling out are all out of reach for a quick getaway and we chose each of them just for that reason. Hawaii, Greenland, Tahiti, Tofino and more. They all require multiple forms of transportation to get to from most major cities. They take days to get into the rhythm of. And yet, all of these destinations are also home for the kids there- kids who are perhaps dreaming instead of the bustle of massive cities, of rolling plains that seem never ending, or even a simple train-networked university town. While this issue will share a number of places that are far from where many of us live, the idea of a remote destination to some extent will always be a construct. Ultimately, when we (at Tiny Atlas) say Remote, we mean a place far away from our own daily expectations.</p>
-                       <p>For the TIny Atlas community, finding the unexpected turns travel is a living classroom. Time on the road becomes time to explore and learn, meet new people, reconnect with our loved ones, discover new species and landscapes, try new foods and (for many of us) take lots of pictures. </p>
+                       <p>For the Tiny Atlas community, time on the road becomes time to explore and learn. Travel is how we meet new people, reconnect with our loved ones, discover new species and landscapes, try new foods and (for many of us) take lots of pictures.</p>
                        <p>Thank you,<br />Emily Nathan <br />Founder + Publisher<br /> Tiny Atlas Quarterly</p>
                        </div>
                   </div><!--END INTERVIEW -->
