--- a/new-site/events/solas/index.html
+++ b/new-site/events/solas/index.html
@@ -50,7 +50,7 @@
 
     <span class="header-links list-triangle"><a href="../index.html">Events</a>
           <ul>
-            <li><a href="../lummi-island/index.html">Lummis Island</a></li> <li><a href="../mendocino/index.html">Mendocino</a></li>
+            <li><a href="../lummi-island/index.html">Lummi Island</a></li> <li><a href="../mendocino/index.html">Mendocino</a></li>
             <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../climate/index.html">Climate</a></li>
             <li><a href="../mytinyatlaslondon/index.html">London</a></li>
