--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -150,7 +150,7 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/maui-title.png" alt="" style="width:410px;"></div>
-                        <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a><br />
+                        <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a> &amp; <a href="https://andrewtkearns.com/">Andrew Kearns</a><br />
                          Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
                          Lettering & Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
                     </div>
