--- a/new-site/index.html
+++ b/new-site/index.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="split cover fadeIn animated">
-            <img src="images/2018-remote-logo.png" alt="" class="fadeIn animated">
+            <img src="images/2018-remote-logo-v2.png" alt="" class="fadeIn animated">
         </div>
         <div class="split content">
             <div class="intro">
