--- a/new-site/kona/index.html
+++ b/new-site/kona/index.html
@@ -154,7 +154,7 @@
                          <p>The Halema'uma'u crater erupting in the early hours, on the slopes of Kilauea. Before sunrise and after sunset, the fiery glow of the lava lake dyes the steam with vibrant reds and oranges.</p>
                          <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a> &amp; <a href="https://andrewtkearns.com/">Andrew Kearns</a> <br />
                           Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
-                          Lettering & Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a></p>
+                          Script Lettering and Hawaii Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
