--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -152,7 +152,7 @@
                         <div class="title-ill"><img src="images/maui-title.png" alt="" style="width:410px;"></div>
                         <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a> &amp; <a href="https://andrewtkearns.com/">Andrew Kearns</a><br />
                          Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
-                         Lettering & Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
+                         Script Lettering and Hawaii Illustrations by:<br> <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
