--- a/new-site/oahu/index.html
+++ b/new-site/oahu/index.html
@@ -150,11 +150,11 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/oahu-title.png" alt="" style="width:410px;"></div>
-                        <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a>, 
+                        <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a>,
                         <a href="http://www.tysonwheatley.com">Tyson Wheatley</a> &<br>
                         <a href="http://www.daejafallas.com">Daeja Fallas</a><br />
                          Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
-                         Lettering & Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
+                         Script Lettering and Hawaii Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
