updates on written text - remote

--- a/new-site/about/2017-editors-letter.html
+++ b/new-site/about/2017-editors-letter.html
@@ -117,7 +117,7 @@
             <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
-        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
+        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a>
         </span>
       </div>
   </div>
