--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -774,7 +774,7 @@ $(function() {
           </ul>
         </span>
 
-        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a></span>
     </div>
 </div>
 
