--- a/new-site/index.html
+++ b/new-site/index.html
@@ -101,7 +101,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="https://alitedesigns.com/collections/californiamade" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a></span>
             </div>
         </div>
 
@@ -127,7 +127,7 @@
                       <img src="images/oahu-feature.jpg" alt="" class="preview" />
                       <div class="info">
                           <img src="images/oahu-title.png" alt="" class="title" />
-                          <p class="text">Discover the fresh faces of Oahu - whether freediving or haku lei making – these locals embody the tradition and community that shape the island</p>
+                          <p class="text">Discover the fresh faces of Oahu - whether freediving or haku lei-making – these locals embody the tradition and community that shape the island.</p>
                           <div class="meta">Travel Log<span>4.22.2018</span></div>
                       </div>
                   </a>
@@ -138,7 +138,7 @@
                       <img src="images/maui-feature.png" alt="" class="preview" />
                       <div class="info">
                           <img src="images/maui-title.png" alt="" class="title" />
-                          <p class="text">From jungles where wild vines reclaim paved roads, to flowing waterfalls and lush National Parks, Maui’s natural wonders await</p>
+                          <p class="text">From jungles where wild vines reclaim paved roads, to flowing waterfalls and lush National Parks, Maui’s natural wonders await.</p>
                           <div class="meta">beauty<span>4.22.2018</span></div>
                       </div>
                   </a>
@@ -207,7 +207,7 @@
               <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
               <h3>A casual camera bag for  photographers</h3>
               <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
-              <a href="https://www.alitedesigns.com/collections/californiamade"><button>Buy</button></a>
+              <a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag"><button>Buy</button></a>
             </div>
           </div>
 
