--- a/new-site/kona/index.html
+++ b/new-site/kona/index.html
@@ -154,7 +154,7 @@
                          <p>The Halema'uma'u crater erupting in the early hours, on the slopes of Kilauea. Before sunrise and after sunset, the fiery glow of the lava lake dyes the steam with vibrant reds and oranges.</p>
                          <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a> &amp; <a href="https://andrewtkearns.com/">Andrew Kearns</a> <br />
                           Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
-                          Script Lettering and Hawaii Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a></p>
+                          Script Lettering and Hawaii Illustrations by: <br><a href="https://www.juliannagoodman.com">Julianna Goodman</a></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -643,6 +643,9 @@
                         <h5><a href="http://www.teshimarestaurant.com/">Teshima's Restaurant</a></h5>
                         <p>A local establishment, Teshima's has been open in Kona for almost one hundred years. Think Japanese classics like sashimi and sukiyaki, and bento boxes for lunch.</p>
 
+                        <h5><a href="http://www.redwatercafe.com/">Red Water Cafe</a></h5>
+                        <p>Both locals and tourists come together at this classic spot in Waimea. Paintings by local artists adorn the walls, and dishes are multicultural and creative — think ahi with shiso or lilikoi coconut curry.</p>
+
                         <h4>Stay:</h4>
                         <h5><a href="https://www.volcanovillagelodge.com/">Volcano Village Lodge</a></h5>
                         <p>A cozy bed and breakfast tucked away just outside of Volcanoes National Park. The perfect refuge after a day of exploring the island's volcanoes, black sand beaches, and native Hawaiian rainforest.</p>
@@ -657,7 +660,7 @@
                         <h5><a href="https://www.nps.gov/havo/index.htm">Hawai'i Volcanoes National Park</a></h5>
                         <p>Home to two active Hawaiian volcanoes, Kilauea and Mauna Loa. Walk through the 500 year-old Thurston Lava Tube and spot native birds like crimson 'apapane or the lesser common oma'o. See the fiery lava meet the sea and lava flows on the Chain of Craters Road, and explore dozens of miles of hiking trails that wind through this spectacular landscape.</p>
 
-                        <h5>Snorkel at Kealakekua Bay</h5>
+                        <h5><a href="https://hawaiistateparks.org/parks/hawaii/kealakekua-bay-state-historical-park/">Snorkel at Kealakekua Bay</a></h5>
                         <p>Admire the tropical marine life and spot sea turtles at secluded Kealakekua Bay for some of Hawaii's very best snorkeling.</p>
 
                         <h5><a href="https://www.hawaii-forest.com/tours/kona-maunakea/">Maunakea Summit & Stars</a></h5>
