--- a/new-site/maui/index.html
+++ b/new-site/maui/index.html
@@ -150,7 +150,7 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/maui-title.png" alt="" style="width:410px;"></div>
-                        <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a> &amp; <a href="https://andrewtkearns.com/">Andrew Kearns</a><br />
+                        <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a><br />
                          Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
                          Script Lettering and Hawaii Illustrations by:<br> <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
                     </div>
@@ -752,6 +752,10 @@
                         <h5><a href="https://www.yelp.com/biz/aunty-sandys-banana-bread-keanae-2">Aunty Sandy's Banana Bread</a></h5>
                         <p>A necessary stop along the Road to Hāna. Aunty Sandy has been making the same, delicious banana bread for over 30 years. </p>
 
+                        <h5><a href="http://cdamaui.com/">Cafe Des Amis</a></h5>
+                        <p>Pa'ia's Cafe Des Amis serves freshly-made crepes alongside slow-cooked Indian curries. Cozy, casual, and with vintage decor.</p>
+
+
                         <h4>Stay:</h4>
                         <h5><a href="https://travaasa.com/hana/">Travassa</a></h5>
                         <p>Spectacular boutique hotel in Hana, often named one of the best in Hawaii. Travassa houses everything from a natural spa to lei-making classes to bamboo pole fishing. Nestled in the middle of lush, rolling fields, home to wandering horses and an infinity pool. Their on-site restaurant, the Preserve Kitchen + Bar, is an excellent dinner option.</p>
@@ -765,9 +769,6 @@
 
                         <h5><a href="https://www.nps.gov/hale/index.htm">Haleakala National Park</a></h5>
                         <p>Haleakala - Hawaiian for "house of the sun" is one of Maui's most well-known national parks, and for good reason. At 10,000 feet, this might be one of the most spectacular sunrises in the world.</p>
-
-                        <h5><a href="http://cdamaui.com/">Cafe Des Amis</a></h5>
-                        <p>Pa'ia's Cafe Des Amis serves freshly-made crepes alongside slow-cooked Indian curries. Cozy, casual, and with vintage decor.</p>
 
                         <h5><a href="https://imrieindustries.com/">Imrie Industries</a></h5>
                         <p>Beautifully-designed bathing suits and clothing by the Imrie family, who split their time between Maui, Montauk, the Caribbean (and with locations in each).</p>
