--- a/new-site/oahu/index.html
+++ b/new-site/oahu/index.html
@@ -151,10 +151,10 @@
                     <div id="pg-interview">
                         <div class="title-ill"><img src="images/oahu-title.png" alt="" style="width:410px;"></div>
                         <p>Photography by: <a href="http://www.emilynathan.com" target="_blank">Emily Nathan</a>,
-                        <a href="http://www.tysonwheatley.com">Tyson Wheatley</a> &<br>
-                        <a href="http://www.daejafallas.com">Daeja Fallas</a><br />
+                        <a href="http://www.tysonwheatley.com">Tyson Wheatley</a>,<br>
+                        <a href="http://www.daejafallas.com">Daeja Fallas</a> & <a href="https://andrewtkearns.com/">Andrew Kearns</a> <br />
                          Writing by: <a href="https://www.charlotteboates.me/" target="_blank">Charlotte Boates</a><br />
-                         Script Lettering and Hawaii Illustrations by: <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
+                         Script Lettering and Hawaii Illustrations by:<br> <a href="https://www.juliannagoodman.com">Julianna Goodman</a><br /></p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -1042,6 +1042,8 @@
 
                         <h5><a href="http://www.roysbeachhouse.com/">Roy's Beach House</a></h5>
                         <p>Overlooking the ocean at Kuilima Cove, Roy's is an easy, casual spot for lunch on the North Shore. Roy's has excellent fresh fish (like their macadamia nut mahi mahi) and Hawaiian classics.</p>
+                        <h5><a href="http://www.thepiligroup.com/">The Pili Group Cooking Classes & Catering</a></h5>
+                        <p>Led by Mark Noguchi, a renowned local Oahu chef, the Pili Group focuses on the connection between food and community. The Pili Group hosts hands-on cooking classes, public workdays each week at a local farm, and catering with an emphasis on hyperlocal cuisine.</p>
 
 
                         <h4>Stay:</h4>
