--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -116,7 +116,7 @@
             <li><a href="../events/montauk/index.html">Montauk Show</a></li>
           </ul>
         </span>
-        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
+        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a>
         </span>
       </div>
   </div>
@@ -148,8 +148,9 @@
                        <!-- INTERVIW -->
                        <div id="pg-interview">
                        <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
-                       <p>Tiny Atlas Quarterly magazine was founded by Emily Nathan, Jake Huffman and Liz Mullally in 2012 with Deb Hearey joining soon after. The magazine began as an extension of our collaborative work as professional photographers, designers and photo editors, but it was created on a very personal level. It’s where we shared all the places we loved to travel ourselves, as well as how we liked to see our own backyards. Today, helmed by Emily Nathan, Tiny Atlas is known for a signature visual style specializing in telling rich, beautiful stories that unfold through images, art, and personal accounts.</p>
-                       <p>Tiny Atlas Creative Services offers the highest quality travel and lifestyle content. We support brands and destinations with social media strategy and engagement and we help clients reach influencers, extend their awareness, as well as build and increase community engagement via social media, events, influencer trips and more.</p>
+                       <p>Tiny Atlas Quarterly was founded in 2012 by photographer Emily Nathan and designers Jake Huffman and Liz Mullally as a creative project. We chose to tell the story of travel from the perspectives of professional image makers whose voices normally would be absent from traditional travel publications. Today, Tiny Atlas, helmed by Emily Nathan and photo director Deb Hearey is known for rich, beautiful photography stories that unfold through a series of images.</p>
+                       <p>Our Instagram hashtag <a href="https://www.instagram.com/explore/tags/mytinyatlas/?hl=en" target="_blank">#mytinyatlas</a>, with well over 5 million posts, is a daily record of both Tiny Atlas’ editorial trips and projects, as well as an ever-present pulse on our community’s daily life.</p>
+                       <p>Tiny Atlas is both a magazine attached to a production company and a creative agency connected to an authentic global community of travelers and photographers. In addition, we partner with select brands to produce the highest quality travel and lifestyle content with our expansive team of image makers. Increasingly, we create real-time activations and trips around the globe, engaging with our growing audience alongside our partners.</p>
                        <h3>Contact</h3>
                        <p>Instagram<br />
                          <a href="https://www.instagram.com/tinyatlasquarterly/"> @tinyatlasquarterly</a><br />
@@ -173,7 +174,7 @@
 
                       <p><a href="stockists.html">Stockists</a></p>
 
-                       <p class="italics">Image by: Emily Shur</p>
+                       <p class="italics">Image by: Emily Nathan</p>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
