--- a/new-site/about/masthead.html
+++ b/new-site/about/masthead.html
@@ -117,7 +117,7 @@
           </ul>
         </span>
 
-        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a>
+        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a>
         </span>
       </div>
   </div>
@@ -222,6 +222,7 @@
                        <h3>PRESS INQUIRIES &amp; AD SALES</h3>
                        <p><a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
                        <br/>at Ohana Communications</a></p>
+                       <p class="italics">Image by: Emily Nathan</p>
 
                        </div>
                   </div><!--END INTERVIEW -->
