--- a/new-site/events/solas/index.html
+++ b/new-site/events/solas/index.html
@@ -60,7 +60,7 @@
           </ul>
         </span>
 
-        <span class="header-links"><a href="https://www.alitedesigns.com/" target="_blank">Shop</a></span>
+        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a></span>
     </div>
 </div>
 
