--- a/new-site/index.html
+++ b/new-site/index.html
@@ -134,7 +134,7 @@
               </div>
 
               <div class="feature-card feature-small">
-                  <a href="maui/index.html">
+                  <a href="maui-2018/index.html">
                       <img src="images/maui-feature.png" alt="" class="preview" />
                       <div class="info">
                           <img src="images/maui-title.png" alt="" class="title" />
@@ -145,7 +145,7 @@
               </div>
 
                 <div class="feature-card feature-small">
-                    <a href="kona/index.html">
+                    <a href="kona-2018/index.html">
                         <img src="images/kona-feature.png" alt="" class="preview" />
                         <div class="info">
                             <img src="images/kona-title.png" alt="" class="title" />
